fix(detectable): fix bibliography spacing at bottom of page

--- a/sites/detectable/src/page.scss
+++ b/sites/detectable/src/page.scss
@@ -1057,6 +1057,11 @@ $transition-duration: 500ms;
 
     text-indent: -2rem;
   }
+
+  .csl-entry:last-of-type {
+    margin-bottom: 1rem;
+  }
+
 }
 
 // Legend
